Feat: 결제하기 버튼 추가

--- a/api/src/main/resources/templates/member/me.html
+++ b/api/src/main/resources/templates/member/me.html
@@ -4,7 +4,7 @@
 
     <style>
         .premium {
-            color: #d3b500;
+            color: #ffc307;
         }
 
         .normal {
@@ -39,27 +39,41 @@
     <div class="flex justify-center items-center min-h-screen rounded-lg">
         <div class="bg-white p-8 border rounded-lg">
             <div class="mb-4">
-                <div class="mb-2 flex items-start justify-between">
-                    <h2 class="text-2xl font-semibold mb-4" style="display: inline">내 정보</h2>
-                    <button th:if="${!@rq.member.isSocialMember}" class="bg-neutral text-white px-4 py-2 rounded-lg text-sm"
-                            onclick="openModal()">회원정보수정
-                    </button>
-                    <a href="/member/edit" th:if="${@rq.member.isSocialMember}"
-                       class="bg-neutral text-white px-4 py-2 rounded-lg text-sm">회원정보수정</a>
+                <div class="mb-2 flex justify-between">
+                    <div>
+                        <h2 class="text-2xl font-semibold mb-4" style="display: inline">내 정보</h2>
+                    </div>
+                    <div>
+                        <button th:if="${!@rq.member.isSocialMember}"
+                                class="bg-neutral text-white px-4 py-2 rounded-lg text-sm"
+                                onclick="openModal()">회원정보수정
+                        </button>
+                        <a href="/member/edit" th:if="${@rq.member.isSocialMember}"
+                           class="bg-neutral text-white px-4 py-2 rounded-lg text-sm">회원정보수정
+                        </a>
+                    </div>
                 </div>
 
                 <div class="space-y-2 mb-2">
                     <p>아이디: <span th:text="${@rq.member.username}">유저아이디</span></p>
                     <p>닉네임: <span th:text="${@rq.member.nickname}">유저닉네임</span></p>
                     <p>이메일: <span th:text="${@rq.member.email}">유저이메일</span></p>
-                    <p>회원등급:
-                        <span th:text="${@rq.member.isPayed} ? '프리미엄 회원' : '일반 회원'"
-                              th:class="${@rq.member.isPayed} ? 'premium' : 'normal'">
-                        </span>
-                        <a href="/payment/payment" th:if="${@rq.member.isSocialMember}"
-                           class="bg-neutral text-white px-4 py-2 rounded-lg text-sm">결제하기
-                        </a>
-                    </p>
+                    <div>
+
+                    </div>
+                    <div class="flex justify-between">
+                        <div>
+                            회원등급:
+                            <span th:text="${@rq.member.isPayed} ? '프리미엄 회원' : '일반 회원'"
+                                  th:class="${@rq.member.isPayed} ? 'premium' : 'normal'">
+                            </span>
+                        </div>
+                        <div>
+                            <a href="/payment/showPage" th:if="${!@rq.member.isPayed()}"
+                               class="bg-neutral text-white px-4 py-2 rounded-lg text-sm">결제하기
+                            </a>
+                        </div>
+                    </div>
                 </div>
                 <!-- 모달 창을 인클루드 -->
                 <div id="modalContainer">
