--- a/api/src/main/resources/templates/payment/payment-page.html
+++ b/api/src/main/resources/templates/payment/payment-page.html
@@ -42,7 +42,6 @@
     <script>
         var clientKey = 'test_ck_D4yKeq5bgrpgNXkdALXVGX0lzW6Y'
         var tossPayments = TossPayments(clientKey)
-
         const randomValue = Date.now().toString(36).substring(2);
 
         var button = document.getElementById('payment-button') // 결제하기 버튼
@@ -51,10 +50,9 @@
             tossPayments.requestPayment('카드', {
                 amount: 2000000,
                 orderId: randomValue,
-                orderName: '토스 티셔츠 외 2건',
-                customerName: '박토스',
-                successUrl: 'http://localhost:8080/payment/success',
-                failUrl: 'http://localhost:8080/payment/fail',
+                orderName: '프리미엄 회원권',
+                successUrl: window.location.origin + '/payment/success',
+                failUrl: window.location.origin + '/payment/fail',
             })
         })
     </script>
