Fix: 등급 업그레이드 반영 안 되는 버그 수정

--- a/api/src/main/resources/templates/member/me.html
+++ b/api/src/main/resources/templates/member/me.html
@@ -37,7 +37,7 @@
 
 <main layout:fragment="main" class="container my-3 mx-auto">
     <div class="flex justify-center items-center min-h-screen rounded-lg">
-        <div class="bg-white p-8 border rounded-lg">
+        <div class="bg-white p-8 border rounded-lg" style="width: 500px;">
             <div class="mb-4">
                 <div class="mb-2 flex justify-between">
                     <div>
@@ -80,19 +80,19 @@
                 </div>
             </div>
 
-            <div class="mb-4">
-                <h2 class="text-2xl font-semibold mb-4 mt-4">결제카드 정보(임시)</h2>
-                <div class="flex items-center">
-                    <form class="flex items-center mt-2">
-                        <label for="newNickname" class="mr-2">카드정보</label>
-                        <input type="text" id="newNickname" name="newNickname"
-                               class="border border-gray-300 rounded px-2 py-1">
-                        <button class="ml-2 bg-neutral text-white px-4 py-2 rounded-lg text-sm"
-                                onclick="checkDuplication(event);">중복확인
-                        </button>
-                    </form>
-                </div>
-            </div>
+<!--            <div class="mb-4">-->
+<!--                <h2 class="text-2xl font-semibold mb-4 mt-4">결제카드 정보(임시)</h2>-->
+<!--                <div class="flex items-center">-->
+<!--                    <form class="flex items-center mt-2">-->
+<!--                        <label for="newNickname" class="mr-2">카드정보</label>-->
+<!--                        <input type="text" id="newNickname" name="newNickname"-->
+<!--                               class="border border-gray-300 rounded px-2 py-1">-->
+<!--                        <button class="ml-2 bg-neutral text-white px-4 py-2 rounded-lg text-sm"-->
+<!--                                onclick="checkDuplication(event);">중복확인-->
+<!--                        </button>-->
+<!--                    </form>-->
+<!--                </div>-->
+<!--            </div>-->
 
             <h3 class="text-2xl font-semibold mb-4 mt-4">내가 쓴 글</h3>
             <div class="space-y-2">
