--- a/api/src/main/resources/templates/member/me.html
+++ b/api/src/main/resources/templates/member/me.html
@@ -122,8 +122,15 @@
             <div class="mb-4">
                 <h3 class="text-2xl font-semibold mb-4 mt-4">이력서 검토 내용</h3>
                 <div class="flex items-center">
-<!--                    <p th:if="${loop.index} < 5" th:text="${comment.content}" class="text-xs w-16 text-center">-->
-<!--                        댓글내용</p>-->
+                    <div th:each="predictionDto, loop : ${@rq.getResponsePredictionDto()}">
+                        <a th:if="${loop.index} < 5" th:text="${predictionDto.createDate}" class="text-xs w-16 text-center"
+                           th:href="@{'/resumes/detail/' + ${predictionDto.id}}"
+                           style="margin-left: auto; color: gray;">
+                            이력서 답변 생성일자</a>
+                    </div>
+                    <div class="flex justify-content: flex-end">
+                        <a href="" class="text-xs  w-16 text-center" style="margin-left: auto; color: gray;">>전체보기</a>
+                    </div>
                 </div>
             </div>
 
