--- a/api/src/main/resources/templates/chat/room.html
+++ b/api/src/main/resources/templates/chat/room.html
@@ -199,7 +199,7 @@
                             str += "</div></div>";
                         }
                         else{
-                            str += "<div class='col-6 flex justify-end chat ch1'>";
+                            str += "<div class='col-6 flex chat ch1'>";
                             str += "<div class=\"textbox\" style=\"word-break: break-all;\">";
                             str += content.message.replace(/\n/g, "<br>");
                             str += "</div></div>";
