--- a/api/src/main/resources/templates/member/me.html
+++ b/api/src/main/resources/templates/member/me.html
@@ -80,19 +80,6 @@
                 </div>
             </div>
 
-            <!--            <div class="mb-4">-->
-            <!--                <h2 class="text-2xl font-semibold mb-4 mt-4">결제카드 정보(임시)</h2>-->
-            <!--                <div class="flex items-center">-->
-            <!--                    <form class="flex items-center mt-2">-->
-            <!--                        <label for="newNickname" class="mr-2">카드정보</label>-->
-            <!--                        <input type="text" id="newNickname" name="newNickname"-->
-            <!--                               class="border border-gray-300 rounded px-2 py-1">-->
-            <!--                        <button class="ml-2 bg-neutral text-white px-4 py-2 rounded-lg text-sm"-->
-            <!--                                onclick="checkDuplication(event);">중복확인-->
-            <!--                        </button>-->
-            <!--                    </form>-->
-            <!--                </div>-->
-            <!--            </div>-->
             <div class="mb-4">
                 <h3 class="text-2xl font-semibold mb-4 mt-4">내가 쓴 글</h3>
                 <div class="space-y-2">
@@ -101,7 +88,7 @@
                             제목</p>
                     </div>
                     <div class="flex justify-content: flex-end">
-                        <a href="" class="text-xs w-16 text-center" style="margin-left: auto; color: gray;">>전체보기</a>
+                        <a href="/member/show/articles" class="text-xs w-16 text-center" style="margin-left: auto; color: gray;">>전체보기</a>
                     </div>
                 </div>
             </div>
@@ -114,14 +101,14 @@
                             댓글내용</p>
                     </div>
                     <div class="flex justify-content: flex-end">
-                        <a href="" class="text-xs  w-16 text-center" style="margin-left: auto; color: gray;">>전체보기</a>
+                        <a href="/member/show/comments" class="text-xs  w-16 text-center" style="margin-left: auto; color: gray;">>전체보기</a>
                     </div>
                 </div>
             </div>
 
             <div class="mb-4">
                 <h3 class="text-2xl font-semibold mb-4 mt-4">이력서 검토 내용</h3>
-                <div class="flex items-center">
+                <div class="space-y-2">
                     <div th:each="predictionDto, loop : ${@rq.getResponsePredictionDto()}">
                         <a th:if="${loop.index} < 5" th:text="${predictionDto.createDate}" class="text-xs w-16 text-center"
                            th:href="@{'/resumes/detail/' + ${predictionDto.id}}"
@@ -136,7 +123,7 @@
 
             <div class="mb-4">
                 <h3 class="text-2xl font-semibold mb-4 mt-4">면접 예상 질문 내용</h3>
-                <div class="flex items-center">
+                <div class="space-y-2">
                     <ul class="list-disc ml-8">
                         <li>댓글 1</li>
                         <li>댓글 2</li>
