--- a/api/src/main/resources/templates/member/myArticles.html
+++ b/api/src/main/resources/templates/member/myArticles.html
@@ -1,6 +1,6 @@
 <html layout:decorate="~{layout/layout.html}">
 <head>
-    <title>회원가입</title>
+    <title>내가 쓴 글</title>
 
 </head>
 <body>
@@ -10,14 +10,41 @@
             <div class="mb-4">
                 <h3 class="text-2xl font-semibold mb-4 mt-4">내가 쓴 글</h3>
                 <div class="space-y-2">
-                    <div th:each="article, loop: ${@rq.member.articles}">
-                        <p th:text="${article.title}" class="text-xs w-16 text-center">글
-                            제목</p>
+                    <div th:each="article, loop: ${@rq.member.articles}" style="text-align: left">
+                        <a th:text="${article.title}" class="text-xs w-16 text-center ml-2">
+                            글 제목</a>
                     </div>
                 </div>
             </div>
+
+            <!-- 페이징처리 시작 -->
+            <div th:if="${paging != null}" class="flex justify-center mb-6">
+                <div class="flex w-1/2 justify-center">
+                    <a class="page-link btn btn-sm btn-ghost grid-0 m-1" th:href="@{|?page=${paging.number-1}|}" th:classappend="${!paging.hasPrevious} ? 'invisible'">
+                        <span>&lt; 이전</span>
+                    </a>
+                    <a th:text="${page} + 1" class="page-link btn btn-sm btn-ghost m-1"
+                       th:each="page: ${#numbers.sequence(0, paging.totalPages-1)}"
+                       th:if="${page >= paging.number / 10 * 10 and page <= paging.number/10*10 + 9}"
+                       th:classappend="${page == paging.number} ? 'btn-outline pointer-events-none'"
+                       onclick="updatePageNumber()" th:attr="page=${page}"></a>
+                    <a class="page-link btn btn-sm btn-ghost m-1" th:href="@{|?page=${paging.number+1}|}" th:classappend="${!paging.hasNext()} ? 'invisible'">
+                        <span>다음 &gt;</span>
+                    </a>
+                </div>
+            </div>
+            <!-- 페이징처리 끝 -->
         </div>
     </div>
 </main>
+<script>
+    function updatePageNumber() {
+        const page = event.target.getAttribute('page');
+        const currentUrl = new URL(window.location.href);
+        currentUrl.searchParams.delete('page');
+        currentUrl.searchParams.set('page', page);
+        window.location.href = currentUrl.href;
+    }
+</script>
 </body>
 </html>
