--- a/api/src/main/resources/templates/member/me.html
+++ b/api/src/main/resources/templates/member/me.html
@@ -84,11 +84,12 @@
                 <h3 class="text-2xl font-semibold mb-4 mt-4">내가 쓴 글</h3>
                 <div class="space-y-2">
                     <div th:each="article, loop: ${@rq.member.articles}">
-                        <a th:if="${loop.index} < 5" th:text="${article.title}"
+                        <a th:if="${loop.index} < 5" th:href="@{|/article/detail/${article.id}|}"
+                           th:text="${article.title}"
                            class="text-xs w-16 text-center ml-2" style="color: gray;">글 제목</a>
                     </div>
                     <div class="flex justify-content: flex-end">
-                        <a href="/member/show/articles" class="text-xs w-16 text-center" style="margin-left: auto; color: gray;">>전체보기</a>
+                        <a href="/article/show/list" class="text-xs w-16 text-center" style="margin-left: auto; color: gray;">>전체보기</a>
                     </div>
                 </div>
             </div>
@@ -110,7 +111,7 @@
                 <h3 class="text-2xl font-semibold mb-4 mt-4">이력서 검토 내용</h3>
                 <div class="space-y-2">
                     <div th:each="prediction, loop : ${@rq.predictions}">
-                        <a th:if="${loop.index} < 5" th:href="@{'/resumes/detail/' + ${prediction.id}}"
+                        <a th:if="${loop.index} < 5" th:href="@{|/resumes/detail/${prediction.id}|}"
                            th:text="${#temporals.format(prediction.createdDate, 'yy.MM.dd HH:mm')}"
                            class="text-xs w-16 text-center ml-2" style="color: gray;">이력서 답변 생성일자</a>
                     </div>
