--- a/api/src/main/resources/templates/member/myComments.html
+++ b/api/src/main/resources/templates/member/myComments.html
@@ -10,7 +10,7 @@
             <div class="mb-4">
                 <h3 class="text-2xl font-semibold mb-4 mt-4">내가 쓴 댓글</h3>
                 <div class="space-y-2">
-                    <div th:each="comment, loop: ${@rq.member.comments}">
+                    <div th:each="comment, loop: ${comments}">
                         <p th:text="${comment.content}" class="text-xs w-16 text-center">
                             댓글 내용</p>
                     </div>
