--- a/api/src/main/resources/templates/jobstatistic/list.html
+++ b/api/src/main/resources/templates/jobstatistic/list.html
@@ -58,13 +58,18 @@
         이전
       </a>
 
-      <span th:each="page: ${#numbers.sequence(0, paging.totalPages - 1)}"
-            class="btn"
-            th:classappend="${page == paging.number} ? 'active'"
-            th:if="${page >= paging.number - 5 and page <= paging.number + 5}">
+<!--      <span th:each="page: ${#numbers.sequence(0, paging.totalPages - 1)}"-->
+<!--            class="btn"-->
+<!--            th:classappend="${page == paging.number} ? 'active'"-->
+<!--            th:if="${page >= paging.number - 5 and page <= paging.number + 5}">-->
 
-            <a th:text="${page + 1}" th:href="@{/jobstatistic/search/all(page=${page},sector=${param.sector},career=${param.career})}"></a>
-        </span>
+<!--            <a th:text="${page + 1}" th:href="@{/jobstatistic/search/all(page=${page},sector=${param.sector},career=${param.career})}"></a>-->
+<!--        </span>-->
+      <a th:text="${page} + 1" class="page-link btn btn-sm btn-ghost m-1"
+         th:each="page: ${#numbers.sequence(0, paging.totalPages-1)}"
+         th:if="${page >= paging.number / 10 * 10 and page <= paging.number/10*10 + 9}"
+         th:classappend="${page == paging.number} ? 'btn-outline pointer-events-none'"
+         onclick="updatePageNumber()" th:attr="page=${page}"></a>
 
       <a th:href="@{/jobstatistic/search/all(page=${paging.number + 1},sector=${param.sector},career=${param.career})}"
          class="btn"
@@ -75,7 +80,15 @@
   </div>
   <!-- 페이징 처리 종료 -->
 
-
+  <script>
+    function updatePageNumber() {
+      const page = event.target.getAttribute('page');
+      const currentUrl = new URL(window.location.href);
+      currentUrl.searchParams.delete('page');
+      currentUrl.searchParams.set('page', page);
+      window.location.href = currentUrl.href;
+    }
+  </script>
 </main>
 </body>
 </html>
