--- a/api/src/main/resources/templates/member/myComments.html
+++ b/api/src/main/resources/templates/member/myComments.html
@@ -12,28 +12,26 @@
                 <div class="space-y-2">
                     <ul class="container">
                         <li class="bg-neutral text-white p-3 flex justify-between border-b h-11 rounded-md">
-                            <div class="text-sm flex-grow ">게시글 제목</div>
-                            <div class="text-sm flex-grow ">댓글 내용</div>
+                            <div class="text-sm flex-grow w-1/2">게시글 제목</div>
+                            <div class="text-sm flex-grow w-1/2">댓글 내용</div>
                         </li>
-                        <li th:each="article, loop : ${paging}" class="bg-white p-3 flex justify-between border-b h-11">
-                            <a th:href="@{|/article/detail/${article.id}|}"
-                               th:text="${article.title.length() > 15 ? article.title.substring(0, 15) + '...' : article.title}"
-                               class="text-sm flex-grow text-gray-600">
-                            </a>
-                            <div th:text="${#lists.size(article.likesList)}" class="text-xs  w-16 text-center"></div>
-                            <p th:text="${article.commentsCount}" class="text-xs  w-16 text-center"></p>
-                            <p th:text="${article.viewCount}" class="text-xs  w-16 text-center"></p>
+                        <li th:each="comment : ${paging}" class="bg-white p-3 flex justify-between border-b h-11">
+                            <div class="overflow-hidden whitespace-nowrap text-ellipsis w-[calc(50%-1rem)]">
+                                <a th:href="@{|/article/detail/${comment.article.id}|}"
+                                   th:text="${comment.article.title}"
+                                   class="text-sm text-gray-600 hover:text-primary">게시글 제목
+                                </a>
+                            </div>
+                            <div class="overflow-hidden whitespace-nowrap text-ellipsis w-1/2">
+                                <span th:text="${comment.content}"
+                                   class="text-sm text-gray-600">댓글 내용</span>
+                            </div>
                         </li>
                     </ul>
-
-                    <div th:each="comment, loop: ${comments}">
-                        <p th:text="${comment.content}" class="text-xs w-16 text-center">
-                            댓글 내용</p>
-                    </div>
                 </div>
             </div>
 
-            <!-- 페이징처리 시작 -->
+            <!--            &lt;!&ndash; 페이징처리 시작 &ndash;&gt;-->
             <div th:if="${paging != null}" class="flex justify-center mb-6">
                 <div class="flex">
                     <a class="page-link btn btn-sm btn-ghost grid-0 m-1" th:href="@{|?page=${paging.number-1}|}"
@@ -42,10 +40,11 @@
                     </a>
                     <a th:text="${page} + 1" class="page-link btn btn-sm btn-ghost m-1"
                        th:each="page: ${#numbers.sequence(0, paging.totalPages-1)}"
-                       th:if="${page >= paging.number / 10 * 10 and page <= paging.number/10*10 + 9}"
+                       th:if="${page >= paging.number / 10 * 10 and page <= paging.number / 10 * 10 + 9}"
                        th:classappend="${page == paging.number} ? 'btn-outline pointer-events-none'"
                        onclick="updatePageNumber()" th:attr="page=${page}"></a>
-                    <a class="page-link btn btn-sm btn-ghost m-1" th:href="@{|?page=${paging.number+1}|}" th:classappend="${!paging.hasNext()} ? 'invisible'">
+                    <a class="page-link btn btn-sm btn-ghost m-1" th:href="@{|?page=${paging.number + 1}|}"
+                       th:classappend="${!paging.hasNext()} ? 'invisible'">
                         <span>다음 &gt;</span>
                     </a>
                 </div>
@@ -53,15 +52,15 @@
             <!-- 페이징처리 끝 -->
         </div>
     </div>
+    <script>
+        function updatePageNumber() {
+            const page = event.target.getAttribute('page');
+            const currentUrl = new URL(window.location.href);
+            currentUrl.searchParams.delete('page');
+            currentUrl.searchParams.set('page', page);
+            window.location.href = currentUrl.href;
+        }
+    </script>
 </main>
-<script>
-    function updatePageNumber() {
-        const page = event.target.getAttribute('page');
-        const currentUrl = new URL(window.location.href);
-        currentUrl.searchParams.delete('page');
-        currentUrl.searchParams.set('page', page);
-        window.location.href = currentUrl.href;
-    }
-</script>
 </body>
 </html>
